// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table has correct default options 1`] = `
<div
  className="grommetux-table"
>
  <table
    className="grommetux-table__table"
  >
    <tbody>
      <tr>
        <td>
          first
        </td>
        <td>
          note 1
        </td>
      </tr>
      <tr>
        <td>
          second
        </td>
        <td>
          note 2
        </td>
      </tr>
      <tr>
        <td>
          third
        </td>
        <td>
          note 3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table has mismatched headers and body columns 1`] = `
<div
  className="grommetux-table"
>
  <table
    className="grommetux-table__table"
  >
    <div
      className="grommetux-table"
      labels={
        Array [
          "one",
        ]
      }
    >
      <table
        className="grommetux-table__table"
      />
    </div>
    <tbody>
      <tr>
        <td>
          one
        </td>
        <td>
          two - one too many
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
